# Kestrel

./: .env.example  .gitignore  Kestrel_Build_Specification_v1.docx  README.md  SPEC.md  check_ir_pages.py  military_quotes.py  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
assets/brand/kestrel_brand_pack/: README.md
config/: capture_chain.ps1  kestrel.yaml  writing_style.md
config/prompts/: classify.md  priority_item.md  priority_item_brief.md  top_line.md  watchpoints.md
data/: austender_cache.json  australian_defence_source_universe.xlsx  kestrel_config.xlsx  page_cache.db  subscribers.xlsx  ~$australian_defence_source_universe.xlsx
design-pack/: claude_code_kestrel_execution_instructions.md
design-pack/kestrel_brand_rebuild_marketing_pack/kestrel_brand_rebuild_pack/: README.md
docs/: OPERATOR_RUNBOOK.md  SOURCE_MAINTENANCE.md  claude_source_instructions.md  kestrel_brand_design_note.md
scripts/: apply_feed_hints.py  audit_sources.py  find_feeds.py  install_task.ps1  refresh_quotes.py  rerender_html.py  run_once.ps1  update_source_universe.py
src/kestrel/: __main__.py  config.py  models.py  pipeline.py
tests/: test_config.py  test_dedupe.py  test_mece.py  test_rating.py  test_render.py
web-app-plan/: Kestrel_v2_Build_Specification.docx  Kestrel_v2_Deployment_Runbook.docx  Kestrel_v2_Deployment_Runbook.md  SPEC_v2.md  START_HERE_version_control.md
website/: HOSTING.md  index.html  kestrel-web.service  nginx.conf  requirements.txt  server.py  unsubscribe.html
website/static/: script.js  style.css
(+23 files in other folders)
